# better-default-rs

./: Cargo.toml  README.md
src/fancy-default/: Cargo.toml  README.md
src/fancy-default-derive/: Cargo.toml  README.md
src/fancy-default-derive/src/: lib.rs  variant_default.rs
src/fancy-default-derive/src/default/: enum_impl.rs  mod.rs  struct_impl.rs
src/fancy-default/src/: derive.rs  lib.rs  traits.rs
src/tests/: Cargo.toml
src/tests/src/: lib.rs
