[package]
name = "fancy-default"
edition = "2021"
authors = ["Embers-of-the-Fire <stellarishs@163.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Embers-of-the-Fire/better-default-rs.git"
homepage = "https://github.com/Embers-of-the-Fire/better-default-rs"
description = "A better `derive(Default)` implementation."

categories = ["rust-patterns", "no-std"]
keywords = ["proc-macro", "default", "derive"]

version = "0.1.0"

[dependencies]
# remove `path` when publishing
fancy-default-derive = { version = "~0.1.0", path = "../fancy-default-derive" }
